--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-material-dashboard",
+  "name": "instant-admin",
   "version": "1.4.0",
   "private": true,
   "scripts": {
@@ -39,6 +39,7 @@
     "prettier": "1.19.1",
     "sass": "1.26.2",
     "sass-loader": "8.0.2",
-    "vue-template-compiler": "2.6.11"
+    "vue-template-compiler": "2.6.11",
+    "@vue/eslint-config-standard": "^4.0.0"
   }
 }
