changes in instadmin

--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "vue-material": "1.0.0-beta-11",
     "vue-router": "3.1.6",
     "vue-social-sharing": "2.4.7",
-    "vue-sweetalert2": "^3.0.6"
+    "vue-stripe-checkout": "^3.5.11",
+    "vue-sweetalert2": "^3.0.6",
+    "vuejs-paginate": "^2.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "4.2.3",
