--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vue-social-sharing": "2.4.7",
     "vue-stripe-checkout": "^3.5.11",
     "vue-sweetalert2": "^3.0.6",
+    "vue2-google-maps": "^0.10.7",
     "vuejs-paginate": "^2.1.0"
   },
   "devDependencies": {
